qt-restricted-extras/qscintilla6/gen_qscilexersql.nim


proc fcQsciLexerSQL_new(): ptr cQsciLexerSQL {.importc: "QsciLexerSQL_new".}
proc fcQsciLexerSQL_new2(parent: pointer): ptr cQsciLexerSQL {.importc: "QsciLexerSQL_new2".}
proc fcQsciLexerSQL_metaObject(self: pointer, ): pointer {.importc: "QsciLexerSQL_metaObject".}
proc fcQsciLexerSQL_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciLexerSQL_metacast".}
proc fcQsciLexerSQL_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciLexerSQL_metacall".}
proc fcQsciLexerSQL_tr(s: cstring): struct_miqt_string {.importc: "QsciLexerSQL_tr".}
proc fcQsciLexerSQL_language(self: pointer, ): cstring {.importc: "QsciLexerSQL_language".}
proc fcQsciLexerSQL_lexer(self: pointer, ): cstring {.importc: "QsciLexerSQL_lexer".}
proc fcQsciLexerSQL_braceStyle(self: pointer, ): cint {.importc: "QsciLexerSQL_braceStyle".}
proc fcQsciLexerSQL_defaultColor(self: pointer, style: cint): pointer {.importc: "QsciLexerSQL_defaultColor".}
proc fcQsciLexerSQL_defaultEolFill(self: pointer, style: cint): bool {.importc: "QsciLexerSQL_defaultEolFill".}
proc fcQsciLexerSQL_defaultFont(self: pointer, style: cint): pointer {.importc: "QsciLexerSQL_defaultFont".}
proc fcQsciLexerSQL_defaultPaper(self: pointer, style: cint): pointer {.importc: "QsciLexerSQL_defaultPaper".}
proc fcQsciLexerSQL_keywords(self: pointer, set: cint): cstring {.importc: "QsciLexerSQL_keywords".}
proc fcQsciLexerSQL_description(self: pointer, style: cint): struct_miqt_string {.importc: "QsciLexerSQL_description".}
proc fcQsciLexerSQL_refreshProperties(self: pointer, ): void {.importc: "QsciLexerSQL_refreshProperties".}
proc fcQsciLexerSQL_backslashEscapes(self: pointer, ): bool {.importc: "QsciLexerSQL_backslashEscapes".}
proc fcQsciLexerSQL_setDottedWords(self: pointer, enable: bool): void {.importc: "QsciLexerSQL_setDottedWords".}
proc fcQsciLexerSQL_dottedWords(self: pointer, ): bool {.importc: "QsciLexerSQL_dottedWords".}
proc fcQsciLexerSQL_setFoldAtElse(self: pointer, fold: bool): void {.importc: "QsciLexerSQL_setFoldAtElse".}
proc fcQsciLexerSQL_foldAtElse(self: pointer, ): bool {.importc: "QsciLexerSQL_foldAtElse".}
proc fcQsciLexerSQL_foldComments(self: pointer, ): bool {.importc: "QsciLexerSQL_foldComments".}
proc fcQsciLexerSQL_foldCompact(self: pointer, ): bool {.importc: "QsciLexerSQL_foldCompact".}
proc fcQsciLexerSQL_setFoldOnlyBegin(self: pointer, fold: bool): void {.importc: "QsciLexerSQL_setFoldOnlyBegin".}
proc fcQsciLexerSQL_foldOnlyBegin(self: pointer, ): bool {.importc: "QsciLexerSQL_foldOnlyBegin".}
proc fcQsciLexerSQL_setHashComments(self: pointer, enable: bool): void {.importc: "QsciLexerSQL_setHashComments".}
proc fcQsciLexerSQL_hashComments(self: pointer, ): bool {.importc: "QsciLexerSQL_hashComments".}
proc fcQsciLexerSQL_setQuotedIdentifiers(self: pointer, enable: bool): void {.importc: "QsciLexerSQL_setQuotedIdentifiers".}
proc fcQsciLexerSQL_quotedIdentifiers(self: pointer, ): bool {.importc: "QsciLexerSQL_quotedIdentifiers".}
proc fcQsciLexerSQL_setBackslashEscapes(self: pointer, enable: bool): void {.importc: "QsciLexerSQL_setBackslashEscapes".}
proc fcQsciLexerSQL_setFoldComments(self: pointer, fold: bool): void {.importc: "QsciLexerSQL_setFoldComments".}
proc fcQsciLexerSQL_setFoldCompact(self: pointer, fold: bool): void {.importc: "QsciLexerSQL_setFoldCompact".}
proc fcQsciLexerSQL_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciLexerSQL_tr2".}
proc fcQsciLexerSQL_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciLexerSQL_tr3".}
proc fQsciLexerSQL_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QsciLexerSQL_virtualbase_metaObject".}
proc fcQsciLexerSQL_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_metaObject".}
proc fQsciLexerSQL_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QsciLexerSQL_virtualbase_metacast".}
proc fcQsciLexerSQL_override_virtual_metacast(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_metacast".}
proc fQsciLexerSQL_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QsciLexerSQL_virtualbase_metacall".}
proc fcQsciLexerSQL_override_virtual_metacall(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_metacall".}
proc fQsciLexerSQL_virtualbase_setBackslashEscapes(self: pointer, enable: bool): void{.importc: "QsciLexerSQL_virtualbase_setBackslashEscapes".}
proc fcQsciLexerSQL_override_virtual_setBackslashEscapes(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setBackslashEscapes".}
proc fQsciLexerSQL_virtualbase_setFoldComments(self: pointer, fold: bool): void{.importc: "QsciLexerSQL_virtualbase_setFoldComments".}
proc fcQsciLexerSQL_override_virtual_setFoldComments(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setFoldComments".}
proc fQsciLexerSQL_virtualbase_setFoldCompact(self: pointer, fold: bool): void{.importc: "QsciLexerSQL_virtualbase_setFoldCompact".}
proc fcQsciLexerSQL_override_virtual_setFoldCompact(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setFoldCompact".}
proc fcQsciLexerSQL_override_virtual_language(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_language".}
proc fQsciLexerSQL_virtualbase_lexer(self: pointer, ): cstring{.importc: "QsciLexerSQL_virtualbase_lexer".}
proc fcQsciLexerSQL_override_virtual_lexer(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_lexer".}
proc fQsciLexerSQL_virtualbase_lexerId(self: pointer, ): cint{.importc: "QsciLexerSQL_virtualbase_lexerId".}
proc fcQsciLexerSQL_override_virtual_lexerId(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_lexerId".}
proc fQsciLexerSQL_virtualbase_autoCompletionFillups(self: pointer, ): cstring{.importc: "QsciLexerSQL_virtualbase_autoCompletionFillups".}
proc fcQsciLexerSQL_override_virtual_autoCompletionFillups(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_autoCompletionFillups".}
proc fQsciLexerSQL_virtualbase_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array{.importc: "QsciLexerSQL_virtualbase_autoCompletionWordSeparators".}
proc fcQsciLexerSQL_override_virtual_autoCompletionWordSeparators(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_autoCompletionWordSeparators".}
proc fQsciLexerSQL_virtualbase_blockEnd(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerSQL_virtualbase_blockEnd".}
proc fcQsciLexerSQL_override_virtual_blockEnd(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_blockEnd".}
proc fQsciLexerSQL_virtualbase_blockLookback(self: pointer, ): cint{.importc: "QsciLexerSQL_virtualbase_blockLookback".}
proc fcQsciLexerSQL_override_virtual_blockLookback(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_blockLookback".}
proc fQsciLexerSQL_virtualbase_blockStart(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerSQL_virtualbase_blockStart".}
proc fcQsciLexerSQL_override_virtual_blockStart(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_blockStart".}
proc fQsciLexerSQL_virtualbase_blockStartKeyword(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerSQL_virtualbase_blockStartKeyword".}
proc fcQsciLexerSQL_override_virtual_blockStartKeyword(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_blockStartKeyword".}
proc fQsciLexerSQL_virtualbase_braceStyle(self: pointer, ): cint{.importc: "QsciLexerSQL_virtualbase_braceStyle".}
proc fcQsciLexerSQL_override_virtual_braceStyle(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_braceStyle".}
proc fQsciLexerSQL_virtualbase_caseSensitive(self: pointer, ): bool{.importc: "QsciLexerSQL_virtualbase_caseSensitive".}
proc fcQsciLexerSQL_override_virtual_caseSensitive(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_caseSensitive".}
proc fQsciLexerSQL_virtualbase_color(self: pointer, style: cint): pointer{.importc: "QsciLexerSQL_virtualbase_color".}
proc fcQsciLexerSQL_override_virtual_color(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_color".}
proc fQsciLexerSQL_virtualbase_eolFill(self: pointer, style: cint): bool{.importc: "QsciLexerSQL_virtualbase_eolFill".}
proc fcQsciLexerSQL_override_virtual_eolFill(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_eolFill".}
proc fQsciLexerSQL_virtualbase_font(self: pointer, style: cint): pointer{.importc: "QsciLexerSQL_virtualbase_font".}
proc fcQsciLexerSQL_override_virtual_font(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_font".}
proc fQsciLexerSQL_virtualbase_indentationGuideView(self: pointer, ): cint{.importc: "QsciLexerSQL_virtualbase_indentationGuideView".}
proc fcQsciLexerSQL_override_virtual_indentationGuideView(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_indentationGuideView".}
proc fQsciLexerSQL_virtualbase_keywords(self: pointer, set: cint): cstring{.importc: "QsciLexerSQL_virtualbase_keywords".}
proc fcQsciLexerSQL_override_virtual_keywords(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_keywords".}
proc fQsciLexerSQL_virtualbase_defaultStyle(self: pointer, ): cint{.importc: "QsciLexerSQL_virtualbase_defaultStyle".}
proc fcQsciLexerSQL_override_virtual_defaultStyle(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_defaultStyle".}
proc fcQsciLexerSQL_override_virtual_description(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_description".}
proc fQsciLexerSQL_virtualbase_paper(self: pointer, style: cint): pointer{.importc: "QsciLexerSQL_virtualbase_paper".}
proc fcQsciLexerSQL_override_virtual_paper(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_paper".}
proc fQsciLexerSQL_virtualbase_defaultColorWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerSQL_virtualbase_defaultColorWithStyle".}
proc fcQsciLexerSQL_override_virtual_defaultColorWithStyle(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_defaultColorWithStyle".}
proc fQsciLexerSQL_virtualbase_defaultEolFill(self: pointer, style: cint): bool{.importc: "QsciLexerSQL_virtualbase_defaultEolFill".}
proc fcQsciLexerSQL_override_virtual_defaultEolFill(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_defaultEolFill".}
proc fQsciLexerSQL_virtualbase_defaultFontWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerSQL_virtualbase_defaultFontWithStyle".}
proc fcQsciLexerSQL_override_virtual_defaultFontWithStyle(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_defaultFontWithStyle".}
proc fQsciLexerSQL_virtualbase_defaultPaperWithStyle(self: pointer, style: cint): pointer{.importc: "QsciLexerSQL_virtualbase_defaultPaperWithStyle".}
proc fcQsciLexerSQL_override_virtual_defaultPaperWithStyle(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_defaultPaperWithStyle".}
proc fQsciLexerSQL_virtualbase_setEditor(self: pointer, editor: pointer): void{.importc: "QsciLexerSQL_virtualbase_setEditor".}
proc fcQsciLexerSQL_override_virtual_setEditor(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_setEditor".}
proc fQsciLexerSQL_virtualbase_refreshProperties(self: pointer, ): void{.importc: "QsciLexerSQL_virtualbase_refreshProperties".}
proc fcQsciLexerSQL_override_virtual_refreshProperties(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_refreshProperties".}
proc fQsciLexerSQL_virtualbase_styleBitsNeeded(self: pointer, ): cint{.importc: "QsciLexerSQL_virtualbase_styleBitsNeeded".}
proc fcQsciLexerSQL_override_virtual_styleBitsNeeded(self: pointer, slot: int) {.importc: "QsciLexerSQL_override_virtual_styleBitsNeeded".}
proc fQsciLexerSQL_virtualbase_wordCharacters(self: pointer, ): cstring{.importc: "QsciLexerSQL_virtualbase_wordCharacters".}
